# pido-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix
benches/: benchmarks.rs
src/: lib.rs  main.rs
