[package]
name = "pido-rs"
version = "0.1.0"
edition = "2024"


[dependencies]
rayon = "1.10"        
serde = { version = "1.0", features = ["derive"] }  
bincode = "1.3"      
log = "0.4"         
env_logger = "0.11"   
num = "0.4"          


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
