[package]
name = "pido-rs"
version = "0.1.0"
desctiption = "A BLAZINGLY FAST AND MEMORY SAFE library for checking even/odd numbers"
edition = "2024"


[dependencies]
rayon = "1.10"                            # Parallel processing for BLAZINGLY FAST checks
serde = { version = "1.0", features = ["derive"] }  # Serialization for ultimate flexibility
bincode = "1.3"                           # Fast binary serialization
serde_json = "1.0"                        # JSON serialization for extra flair
num = "0.4"                               # Generic numeric operations
clap = { version = "4.5", features = ["derive"] }  # CLI for user input
tokio = { version = "1.40", features = ["full"] }  # Async I/O for futuristic file ops
rand = "0.8"                              # Random number generation for chaotic fun
indicatif = "0.17"                        # Progress bars to show off
anyhow = "1.0"                            # Easy error handling
thiserror = "1.0"                         # Custom error types for pro-level error handling
tracing = "0.1"                           # Advanced logging to replace log
tracing-subscriber = "0.3"                 # Tracing subscriber for epic logs


[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false
